[package]
name = "merkle_hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha2 = "0.10.6"
rs_merkle = "1.4.1"

reed-solomon = "0.2.1"

reed-solomon-16 = "0.1.0"

reed-solomon-erasure = "6.0.0"

